# perception

./: CMakeLists.txt  README.md  package.xml
cfg/: reconfig.cfg
data/: ganesha_final.ply  segmented.pcd  write_pcd_test.pcd
src/: pcl_process.cpp  pcl_read.cpp  pcl_visualize.cpp
